# Poker-Analysis

./: CMakeLists.txt  CardHand.cpp  CardHand.h  CardHandScorer.cpp  CardHandScorer.h  Deck.cpp  Deck.h  Hoyle Playing Card Font Key.docx  PokerHandProbability.cpp  PokerHandProbability.h  PokerScore.cpp  PokerScore.h  README.md  SFMLBackground.cpp  SFMLBackground.h  SFMLCard.cpp  SFMLCard.h  SFMLRank.cpp  SFMLRank.h  SFMLSuit.cpp  SFMLSuit.h  SFMLText.cpp  SFMLText.h  SFMLWinningHand.cpp  SFMLWinningHand.h  main.cpp
